<resources>
    <string name="app_name">My Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Calculator</string>
    <string name="first_number">Enter First Number:</string>
    <string name="second_number">Enter Second Number: </string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplicaiton">Multiplication</string>
</resources>
