<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.thomaskioko.mycalculator.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        android:padding="@dimen/small_padding"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/tvFirstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_number"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:padding="@dimen/small_padding"/>

    <EditText
        android:id="@+id/etFirstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:padding="@dimen/small_padding"/>

    <TextView
        android:id="@+id/tvSecondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_number"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:padding="@dimen/small_padding"/>

    <EditText
        android:id="@+id/etSecondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:padding="@dimen/small_padding"/>

    <RadioButton
        android:id="@+id/rbAddition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addition" />

    <RadioButton
        android:id="@+id/rbSubtraction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtraction" />

    <RadioButton
        android:id="@+id/rbMultiplication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplicaiton"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:background="@color/colorAccent"/>
</LinearLayout>
